<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    tools:context=".taskmanager.TaskManagerActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/judul_task"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/deskripsi_task"
        app:layout_constraintTop_toBottomOf="@id/tf_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:gravity="top"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_due_date"
        style="@style/Widget.MaterialComponents.TimePicker.ImageButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/due_date"
        android:src="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/tf_desc"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/due_date_again"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toTopOf="@id/btn_due_date"
        app:layout_constraintStart_toEndOf="@id/btn_due_date"
        app:layout_constraintBottom_toBottomOf="@id/btn_due_date"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/tambah_todo"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:backgroundTint="@color/teal"
        app:layout_constraintTop_toBottomOf="@id/btn_due_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/hapus_todo"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:stateListAnimator="@null"
        app:cornerRadius="5dp"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>